Photo, minor changes

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <div class="row align-items-center">
 
                     <div class="col-8 col-xl-3">
-                        <h1 class="mb-0 site-logo"><a href="index.html" class="h2 mb-0">Hyunseok Oh</a></h1>
+                        <h1 class="mb-0 site-logo"><a href="index.html" class="h2 mb-0">Minwoo Hyun</a></h1>
                     </div>
 
                     <div class="col-12 col-md-9 d-none d-xl-block">
@@ -116,11 +116,11 @@
 
 
                     <div class="col-md-8 mt-lg-5 text-center">
-                        <h1 class="text-uppercase" data-aos="fade-up">Hyunseok Oh</h1>
+                        <h1 class="text-uppercase" data-aos="fade-up">Minwoo Hyun</h1>
                         <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Quantum Physicist/Engineer, Machine Learning Engineer</p>
                         <div data-aos="fade-up" data-aos-delay="100">
                             <a href="#contact-section" class="btn smoothscroll btn-primary mr-2 mb-2">Get In Touch</a>
-                            <a href="https://drive.google.com/file/d/16n9EbzqLo1PLZ7Ez0nuKuG6XYit9c12g/view?usp=sharing" class="btn smoothscroll btn-primary mr-2 mb-2">Download CV</a>
+                            <a href="https://drive.google.com/file/d/1R3EzDbOtK_uA2kF855zuQKRuw5aHT7y9/view?usp=sharing" class="btn smoothscroll btn-primary mr-2 mb-2">Download CV</a>
                         </div>
                     </div>
 
@@ -145,13 +145,13 @@
                 <div class="row">
                     <div class="col-lg-4 mb-5" data-aos="fade-up" data-aos-delay="">
                         <figure>
-                            <img src="images/self.jpg" alt="Image" class="img-fluid">
+                            <img src="images/profile_Minwoo.jpg" alt="Image" class="img-fluid">
                         </figure>
                     </div>
                     <div class="col-lg-7 ml-auto" data-aos="fade-up" data-aos-delay="100">
                         <div class="mb-4">
-                            <h3 class="h3 mb-4 text-black">Toward the Quantum Future</h3>
-                            <p>Quantum computing has been shifting from an abstract concept into a tangible technique. I want to develop real-world applications of the quantum computer.</p>
+                            <h3 class="h3 mb-4 text-black">Moving Towards a Sustainable Future</h3>
+                            <p>.</p>
 
                         </div>
 
@@ -521,7 +521,7 @@
                     <div class="col-md-4 text-center">
                         <p class="mb-0">
                             <span class="icon-mail_outline d-block h4 text-primary"></span>
-                            <a href="mailto:hyunseok0222@gmail.com">hyunseok0222@gmail.com</a>
+                            <a href="mailto:minwoohyun@ucsb.edu">minwoohyun@ucsb.edu</a>
                         </p>
                     </div>
                 </div>
@@ -529,7 +529,7 @@
                 <div class="row">
                     <div class="col-md-12 mb-5">
 
-                        <form method="post" class="p-5 bg-white" action="https://formspree.io/xrgyqlyz">
+                        <form method="post" class="p-5 bg-white" action="">
 
                             <h2 class="h4 text-black mb-5">Contact Form</h2>
 
