--- a/index.html
+++ b/index.html
@@ -77,19 +77,21 @@
 
                             <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
                                 <li><a href="#home-section" class="nav-link">Home</a></li>
+
                                 <li class="has-children">
                                     <a href="#about-section" class="nav-link">About Me</a>
                                     <ul class="dropdown">
                                         <li><a href="#education-section" class="nav-link">Education</a></li>
                                     </ul>
                                 </li>
+
+                                <li><a href="#publication-section" class="nav-link">Publications</a></li>
+
                                 <li class="has-children">
                                     <a href="#experience-section" class="nav-link">Experience</a>
 
                                     <ul class="dropdown">
                                         <li><a href="#research-section" class="nav-link">Research Projects</a></li>
-
-                                        <li><a href="#publication-section" class="nav-link">Publications</a></li>
                                         <li><a href="#honors-section" class="nav-link">Honors & Awards</a></li>
                                     </ul>
                                 </li>
@@ -185,7 +187,7 @@
                             <a href="https://ucsb.edu">University of California, Santa Barbara</a></h3>
                         <h5 class="h5 mb-4 text-black">Oct 2020 - Present</h5>
                         <ul class="list-unstyled ul-check success">
-                            <li>Department of Physics</li>
+                            <li>Department of Economics</li>
                             <li>PhD Student</li>
                         </ul>
                     </div>
@@ -193,29 +195,49 @@
                         <img src="images/snu.jpg" alt="Image" class="img-fluid">
                     </div>
                     <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="100">
-                        <h3 class="h3 mb-4 text-black"><a href="https://en.snu.ac.kr">Seoul National University</a></h3>
-                        <h5 class="h5 mb-4 text-black">Mar 2013 - Feb 2020</h5>
+                        <h3 class="h3 mb-4 text-black"><a href="https://en.snu.ac.kr">Korea Advanced Institute of Science and Technology (KAIST)</a></h3>
+                        <h5 class="h5 mb-4 text-black">Feb 2017 - Jan 2019</h5>
                         <ul class="list-unstyled ul-check success">
-                            <li>B.S. in Physics, Feb 2020</li>
-                            <li>B.S. in Computer Science and Engineering, Feb 2020</li>
-                            <li>Honor: <em>Summa Cum Laude</em></li>
+                            <li>M.S. in Green Business and Policy, Feb 2019</li>
+                            <li><em>Honors with Master's Thesis</em></li>
                         </ul>
                     </div>
                     <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
                         <img src="images/sshs.jpg" alt="Image" class="img-fluid">
                     </div>
                     <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="100">
-                        <h3 class="h3 mb-4 text-black"><a href="http://en.sshs.hs.kr/html/index.php">Seoul Science High School</a></h3>
-                        <h5 class="h5 mb-4 text-black">Mar 2010 - Feb 2013</h5>
+                        <h3 class="h3 mb-4 text-black"><a href="http://en.sshs.hs.kr/html/index.php">Yonsei University</a></h3>
+                        <h5 class="h5 mb-4 text-black">Mar 2011 - Jan 2017</h5>
                         <ul class="list-unstyled ul-check success">
-                            <li>School for gifted students in mathematics and science</li>
+                            <li>B.S. in Chemical Engineering, Feb 2017</li>
                         </ul>
                     </div>
                 </div>
             </div>
         </section>
 
+        <section class='site-section' id="publication-section">
+            <div class="container">
+                <div class="row mb-5">
+                    <div class="col-12 text-center" data-aos="fade-up">
+                        <h2 class="section-title mb-3">Publications</h2>
+                    </div>
+                </div>
 
+                <div class="row">
+                    <div class="col-12" data-aos="fade-up">
+                        <ul class="list-unstyled ul-check primary text-black">
+                            <li><b>M. Hyun</b>, Y. Kim, and J. Eom (2020), <a href="https://doi.org/10.1016/j.enpol.2020.111918">“Assessing the impact of a demand-resource bidding market on an electricity generation portfolio and the environment”</a>,
+                                <em>Energy Policy</em>, 147, 111918.
+                            </li>
+                            <li>J. Eom, <b>M. Hyun</b>, J. Lee, and H. Lee (2020), <a href="https://doi.org/10.1038/s41560-020-00698-1">“Increase in household energy consumption due to ambient air pollution”</a>,
+                                <em>Nature Energy</em>, 1-9.
+                        </ul>
+
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <section class="site-section bg-light" id="experience-section">
             <div class="container">
@@ -232,12 +254,12 @@
                     </div>
 
                     <div class='col-11 col-lg-3 order-lg-1 mt-4 timeline'>
-                        <p>Oct 2020 - Present</p>
+                        <p>Feb 2019 - Jul 2020</p>
                     </div>
 
                     <div class="col-lg-8 order-lg-3 mb-3 exp-item">
-                        <h3 class="h3 mb-4"><a href="https://www.10-9lab.com/">Quantum Sensing and Imaging Group, UCSB</a></h3>
-                        <h5 class="h5 mb-4 text-black">Graduate Student Researcher</h5>
+                        <h3 class="h3 mb-4"><a href="https://www.10-9lab.com/">Sustainable Development Research Center, KAIST</a></h3>
+                        <h5 class="h5 mb-4 text-black">Research Associate</h5>
                         <ul class="list-unstyled ul-check success">
                             <!-- <li></li> -->
                         </ul>
@@ -255,8 +277,8 @@
                     </div>
 
                     <div class="col-lg-8 order-lg-3 mb-3 exp-item">
-                        <h3 class="h3 mb-4"><a href="https://hallymmedicalai.github.io/">Hallym Medical A.I. Center</a></h3>
-                        <h5 class="h5 mb-4 text-black">A.I. Research Engineer</h5>
+                        <h3 class="h3 mb-4"><a href="https://hallymmedicalai.github.io/">Climate and Energy Policy & Strategy Research Group, KAIST</a></h3>
+                        <h5 class="h5 mb-4 text-black">Research Assistant</h5>
                         <ul class="list-unstyled ul-check success">
                             <li>Developed a machine-learning based nine directions gaze estimation system for strabismus diagnosis</li>
                         </ul>
@@ -368,29 +390,6 @@
                                 <p><a href="#" class="btn btn-primary mr-2 mb-2">Learn More</a></p>
                             </div>
                         </div>
-
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class='site-section' id="publication-section">
-            <div class="container">
-                <div class="row mb-5">
-                    <div class="col-12 text-center" data-aos="fade-up">
-                        <h2 class="section-title mb-3">Publications</h2>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-12" data-aos="fade-up">
-                        <ul class="list-unstyled ul-check primary text-black">
-                            <li>K. Jung, M. H. Abobeih, J. Yun, G. Kim, <b>H. Oh</b>, H. Ang, T. H. Taminiau, and D. Kim, <a href="https://arxiv.org/abs/2006.13478">“Deep learning enhanced individual nuclear-spin detection”</a>, <em>arXiv preprint arXiv:2006.13478</em>                                (2020).
-                            </li>
-                            <li><b>H. Oh</b>, J. Yun, M. H. Abobeih, K. Jung, K. Kim, T. H. Taminiau, and D. Kim, <a href="https://www.nature.com/articles/s41598-020-71339-6">“Algorithmic decomposition for efficient multiple nuclear spin detection in diamond”</a>,
-                                <em>Scientific Reports</em> <strong>10</strong>, 14884 (2020).
-                            </li>
-                        </ul>
 
                     </div>
                 </div>
@@ -509,19 +508,19 @@
                     <div class="col-md-4 text-center">
                         <p class="mb-4">
                             <span class="icon-room d-block h4 text-primary"></span>
-                            <span>1219 Broida Hall, Santa Barbara, CA, USA (93106)</span>
+                            <span>North Hall, Santa Barbara, CA, USA (93106)</span>
                         </p>
                     </div>
                     <div class="col-md-4 text-center">
                         <p class="mb-4">
                             <span class="icon-phone d-block h4 text-primary"></span>
-                            <a href="tel:+821075509336">+1-805-252-7082</a>
+                            <a href="tel:+821075509336">+1-805-971-1031</a>
                         </p>
                     </div>
                     <div class="col-md-4 text-center">
                         <p class="mb-0">
                             <span class="icon-mail_outline d-block h4 text-primary"></span>
-                            <a href="mailto:minwoohyun@ucsb.edu">minwoohyun@ucsb.edu</a>
+                            <a href="mailto:minwoohyun12@gmail.com">minwoohyun12@gmail.com</a>
                         </p>
                     </div>
                 </div>
@@ -589,7 +588,7 @@
                     </div>
                     <div class="col-md-5 mb-5">
                         <h2 class="footer-heading mb-4">About Me</h2>
-                        <p>Hyunseok Oh</p>
+                        <p>Minwoo Hyun</p>
                         <p>Quantum Physicist/Engineer, Machine Learning Researcher</p>
                         <a href="https://www.facebook.com/hyunseok.oh.927/" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
                         <a href="https://www.linkedin.com/in/hyunseok-oh-65031b1ab/" class="pl-3 pr-3"><span class="icon-linkedin"></span></a>
