--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
                     <div class="col-md-8 mt-lg-5 text-center">
                         <h1 class="text-uppercase" data-aos="fade-up">Minwoo Hyun</h1>
-                        <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Quantum Physicist/Engineer, Machine Learning Engineer</p>
+                        <!-- <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Quantum Physicist/Engineer, Machine Learning Engineer</p> -->
                         <div data-aos="fade-up" data-aos-delay="100">
                             <a href="#contact-section" class="btn smoothscroll btn-primary mr-2 mb-2">Get In Touch</a>
                             <a href="https://drive.google.com/file/d/1R3EzDbOtK_uA2kF855zuQKRuw5aHT7y9/view?usp=sharing" class="btn smoothscroll btn-primary mr-2 mb-2">Download CV</a>
@@ -157,6 +157,15 @@
 
                         </div>
 
+                        <!-- <div class="mb-4">
+                            <ul class="list-unstyled ul-check success">
+                                <li>Quantum Computing Researcher</li>
+                                <li>Quantum Experiment Enthusiast</li>
+                                <li>Machine Learning Engineer</li>
+                                <li>UCSB Physics PhD Student</li>
+                            </ul>
+
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -272,68 +281,6 @@
                         <h5 class="h5 mb-4 text-black">Research Assistant</h5>
                         <ul class="list-unstyled ul-check success">
                             <li>Developed a machine-learning based nine directions gaze estimation system for strabismus diagnosis</li>
-                        </ul>
-                    </div>
-                </div>
-
-
-                <div class="row" data-aos="fade-up" data-aos-delay="">
-                    <div class='col-1 col-lg-1 order-lg-2 mt-4'>
-                        <h2 class="h3 mb-4 text-center"><span><span class="text-primary icon-calendar"></span></span>
-                        </h2>
-                    </div>
-
-                    <div class='col-11 col-lg-3 order-lg-1 mt-4 timeline'>
-                        <p>Aug 2019 - Feb 2020</p>
-                    </div>
-
-                    <div class="col-lg-8 order-lg-3 mb-3 exp-item">
-                        <h3 class="h3 mb-4"><a href="https://sites.google.com/view/quantumcomputingatsnu">Quantum Information and Quantum Computing Lab, SNU</a></h3>
-                        <h5 class="h5 mb-4 text-black">Undergraduate Student Researcher</h5>
-                        <ul class="list-unstyled ul-check success">
-                            <li>Constructed the RF voltage stabilizing system for trapped-ion qubits</li>
-                        </ul>
-                    </div>
-                </div>
-
-
-
-                <div class="row" data-aos="fade-up" data-aos-delay="">
-                    <div class='col-1 col-lg-1 order-lg-2 mt-4'>
-                        <h2 class="h3 mb-4 text-center"><span><span class="text-primary icon-calendar"></span></span>
-                        </h2>
-                    </div>
-
-                    <div class='col-11 col-lg-3 order-lg-1 mt-4 timeline'>
-                        <p>Mar 2017 - Aug 2019</p>
-                    </div>
-
-                    <div class="col-lg-8 order-lg-3 mb-3 exp-item">
-                        <h3 class="h3 mb-4"><a href="https://www.iqslab.net/">Integrated Quantum Systems Lab, SNU</a></h3>
-                        <h5 class="h5 mb-4 text-black">Undergraduate Student Researcher</h5>
-                        <ul class="list-unstyled ul-check success">
-                            <li>Developed a multiple nuclear spin detection program in NV center system</li>
-                            <li>Implemented a real-time adaptive feedback system for quantum dot qubits</li>
-                        </ul>
-                    </div>
-                </div>
-
-
-                <div class="row" data-aos="fade-up" data-aos-delay="">
-                    <div class='col-1 col-lg-1 order-lg-2 mt-4'>
-                        <h2 class="h3 mb-4 text-center"><span><span class="text-primary icon-calendar"></span></span>
-                        </h2>
-                    </div>
-
-                    <div class='col-11 col-lg-3 order-lg-1 mt-4 timeline'>
-                        <p>May 2015 - Feb 2017</p>
-                    </div>
-
-                    <div class="col-lg-8 order-lg-3 mb-3 exp-item">
-                        <h3 class="h3 mb-4 text-primary">Military Service</h3>
-                        <h5 class="h5 mb-4 text-black">Auxiliary Police, Sergeant</h5>
-                        <ul class="list-unstyled ul-check success">
-                            <li>Fulfilled military duty as auxiliary police to safeguard public safety</li>
                         </ul>
                     </div>
                 </div>
