skip some sections

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                         <h3 class="h3 mb-4"><a href="https://hallymmedicalai.github.io/">Climate and Energy Policy & Strategy Research Group, KAIST</a></h3>
                         <h5 class="h5 mb-4 text-black">Research Assistant</h5>
                         <ul class="list-unstyled ul-check success">
-                            <li>Developed a machine-learning based nine directions gaze estimation system for strabismus diagnosis</li>
+                            <li>TBD</li>
                         </ul>
                     </div>
                 </div>
@@ -289,9 +289,7 @@
         </section>
 
 
-
-
-        <section class='site-section' id="research-section">
+        <!-- <section class='site-section' id="research-section">
             <div class="container">
                 <div class="row mb-5 justify-content-center">
                     <div class="col-12 text-center" data-aos="fade-up">
@@ -332,9 +330,9 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
-        <section class='site-section bg-light' id="honors-section">
+        <!-- <section class='site-section bg-light' id="honors-section">
             <div class="container">
                 <div class="row mb-5">
                     <div class="col-12 text-center" data-aos="fade-up">
@@ -365,13 +363,13 @@
 
 
             </div>
-        </section>
+        </section> -->
 
         <section class="site-section" id="skill-section">
             <div class="container">
                 <div class="row mb-5">
                     <div class="col-12 text-center" data-aos="fade up">
-                        <h2 class="section-title mb-3">Computer Skills</h2>
+                        <h2 class="section-title mb-3">Programming Skills</h2>
                     </div>
                 </div>
 
@@ -380,14 +378,14 @@
                         <div class="unit-4">
                             <div class="unit-4-icon mr-4 mb-4"><span class="text-primary icon-code"></span></div>
                             <div>
-                                <h3>Programming Languages</h3>
-                                <p>Proficient: Python, C, Java, MATLAB, LabVIEW, Verilog<br> Familiar: C++, VHDL, Scala, Ocaml, Mathematica, HTML, CSS, JavaScript</p>
+                                <!-- <h3>Programming Languages</h3> -->
+                                <p>Fluent: R, Python, ArcGIS<br> Intermediate: Matlab, STATA</p>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="row align-items-stretch">
+                <!-- <div class="row align-items-stretch">
                     <div class="col-md-6 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="100">
                         <div class="unit-4">
                             <div class="unit-4-icon mr-4 mb-4"><span class="text-primary icon-sitemap"></span></div>
@@ -418,7 +416,6 @@
                         </div>
                     </div>
 
-
                     <div class="col-md-6 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="100">
                         <div class="unit-4">
                             <div class="unit-4-icon mr-4 mb-4"><span class="text-primary icon-gears"></span></div>
@@ -429,7 +426,7 @@
                         </div>
                     </div>
 
-                </div>
+                </div> -->
             </div>
         </section>
 
@@ -449,12 +446,12 @@
                             <span>North Hall, Santa Barbara, CA, USA (93106)</span>
                         </p>
                     </div>
-                    <div class="col-md-4 text-center">
+                    <!-- <div class="col-md-4 text-center">
                         <p class="mb-4">
                             <span class="icon-phone d-block h4 text-primary"></span>
                             <a href="tel:+821075509336">+1-805-971-1031</a>
                         </p>
-                    </div>
+                    </div> -->
                     <div class="col-md-4 text-center">
                         <p class="mb-0">
                             <span class="icon-mail_outline d-block h4 text-primary"></span>
