--- a/index.html
+++ b/index.html
@@ -87,15 +87,17 @@
 
                                 <li><a href="#publication-section" class="nav-link">Publications</a></li>
 
+                                <li><a href="#teaching-section" class="nav-link">Teaching</a></li>
+
                                 <li class="has-children">
                                     <a href="#experience-section" class="nav-link">Experience</a>
 
                                     <ul class="dropdown">
-                                        <li><a href="#research-section" class="nav-link">Research Projects</a></li>
-                                        <li><a href="#honors-section" class="nav-link">Honors & Awards</a></li>
+                                        <li><a href="#pt-section" class="nav-link">Presentations</a></li>
+                                        <!-- <li><a href="#honors-section" class="nav-link">Honors & Awards</a></li> -->
                                     </ul>
                                 </li>
-                                <li><a href="#skill-section" class="nav-link">Computer Skills</a></li>
+                                <!-- <li><a href="#skill-section" class="nav-link">Computer Skills</a></li> -->
                                 <li><a href="#contact-section" class="nav-link">Contact</a></li>
                             </ul>
                         </nav>
@@ -153,7 +155,7 @@
                     <div class="col-lg-7 ml-auto" data-aos="fade-up" data-aos-delay="100">
                         <div class="mb-4">
                             <h3 class="h3 mb-4 text-black">Moving Towards a Sustainable Future</h3>
-                            <p>.</p>
+                            <p>My resaerch interest lies at energy and environmental economics.</p>
 
                         </div>
 
@@ -171,7 +173,57 @@
             </div>
         </div>
 
-        <section class='site-section' id="education-section">
+        <section class="site-section bg-light" id="education-section">
+            <div class="container">
+                <div class="row mb-5 justify-content-center">
+                    <div class="col-12 text-center" data-aos="fade">
+                        <h2 class="section-title mb-3">Education</h2>
+                    </div>
+                </div>
+
+                <div class="row" data-aos="fade-up" data-aos-delay="">
+                    <div class='col-1 col-lg-1 order-lg-2 mt-4'>
+                        <h2 class="h3 mb-4 text-center"><span><span class="text-primary icon-calendar"></span></span>
+                        </h2>
+                    </div>
+
+                    <div class='col-11 col-lg-3 order-lg-1 mt-4 timeline'>
+                        <p>Oct 2020 - Present</p>
+                    </div>
+
+                    <div class="col-lg-8 order-lg-3 mb-3 exp-item">
+                        <h3 class="h3 mb-4"><a href="https://www.10-9lab.com/">University of California, Santa Barbara</a></h3>
+                        <h5 class="h5 mb-4 text-black">Ph.D. Student in Economics</h5>
+                        <ul class="list-unstyled ul-check success">
+                            <!-- <li></li> -->
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="row" data-aos="fade-up" data-aos-delay="">
+                    <div class='col-1 col-lg-1 order-lg-2 mt-4'>
+                        <h2 class="h3 mb-4 text-center"><span><span class="text-primary icon-calendar"></span></span>
+                        </h2>
+                    </div>
+
+                    <div class='col-11 col-lg-3 order-lg-1 mt-4 timeline'>
+                        <p>Feb 2017 - Jan 2019</p>
+                    </div>
+
+                    <div class="col-lg-8 order-lg-3 mb-3 exp-item">
+                        <h3 class="h3 mb-4"><a href="https://hallymmedicalai.github.io/">Korea Advanced Institute of Science and Technology (KAIST)</a></h3>
+                        <h5 class="h5 mb-4 text-black">M.S. in Green Business and Policy, Feb 2019</h5>
+                        <h5 class="h5 mb-4 text-black"><em>Honors with Master's Thesis</em></h5>
+                        <ul class="list-unstyled ul-check success">
+                            <li>TBD</li>
+                        </ul>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
+        <!-- <section class='site-section' id="education-section">
             <div class="container">
                 <div class="row mb-5 justify-content-center" id='education-section'>
                     <div class="col-12 text-center" data-aos="fade">
@@ -214,7 +266,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <section class='site-section' id="publication-section">
             <div class="container">
@@ -239,11 +291,109 @@
             </div>
         </section>
 
+        <section class="site-section bg-light" id="teaching-section">
+            <div class="container">
+                <div class="row mb-5 justify-content-center">
+                    <div class="col-12 text-center" data-aos="fade">
+                        <h2 class="section-title mb-3">Teaching</h2>
+                    </div>
+                </div>
+
+                <div class="row" data-aos="fade-up" data-aos-delay="">
+                    <div class='col-1 col-lg-1 order-lg-2 mt-4'>
+                        <h2 class="h3 mb-4 text-center"><span><span class="text-primary icon-calendar"></span></span>
+                        </h2>
+                    </div>
+
+                    <div class='col-11 col-lg-3 order-lg-1 mt-4 timeline'>
+                        <p>Feb 2019 - Jul 2020</p>
+                    </div>
+
+                    <div class="col-lg-8 order-lg-3 mb-3 exp-item">
+                        <h3 class="h3 mb-4"><a href="https://www.10-9lab.com/">Sustainable Development Research Center, KAIST</a></h3>
+                        <h5 class="h5 mb-4 text-black">Research Associate</h5>
+                        <ul class="list-unstyled ul-check success">
+                            <!-- <li></li> -->
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="row" data-aos="fade-up" data-aos-delay="">
+                    <div class='col-1 col-lg-1 order-lg-2 mt-4'>
+                        <h2 class="h3 mb-4 text-center"><span><span class="text-primary icon-calendar"></span></span>
+                        </h2>
+                    </div>
+
+                    <div class='col-11 col-lg-3 order-lg-1 mt-4 timeline'>
+                        <p>Apr 2020 - Jul 2020</p>
+                    </div>
+
+                    <div class="col-lg-8 order-lg-3 mb-3 exp-item">
+                        <h3 class="h3 mb-4"><a href="https://hallymmedicalai.github.io/">Climate and Energy Policy & Strategy Research Group, KAIST</a></h3>
+                        <h5 class="h5 mb-4 text-black">Research Assistant</h5>
+                        <ul class="list-unstyled ul-check success">
+                            <li>TBD</li>
+                        </ul>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
         <section class="site-section bg-light" id="experience-section">
             <div class="container">
                 <div class="row mb-5 justify-content-center">
                     <div class="col-12 text-center" data-aos="fade">
                         <h2 class="section-title mb-3">Experience</h2>
+                    </div>
+                </div>
+
+                <div class="row" data-aos="fade-up" data-aos-delay="">
+                    <div class='col-1 col-lg-1 order-lg-2 mt-4'>
+                        <h2 class="h3 mb-4 text-center"><span><span class="text-primary icon-calendar"></span></span>
+                        </h2>
+                    </div>
+
+                    <div class='col-11 col-lg-3 order-lg-1 mt-4 timeline'>
+                        <p>Feb 2019 - Jul 2020</p>
+                    </div>
+
+                    <div class="col-lg-8 order-lg-3 mb-3 exp-item">
+                        <h3 class="h3 mb-4"><a href="https://www.10-9lab.com/">Sustainable Development Research Center, KAIST</a></h3>
+                        <h5 class="h5 mb-4 text-black">Research Associate</h5>
+                        <ul class="list-unstyled ul-check success">
+                            <!-- <li></li> -->
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="row" data-aos="fade-up" data-aos-delay="">
+                    <div class='col-1 col-lg-1 order-lg-2 mt-4'>
+                        <h2 class="h3 mb-4 text-center"><span><span class="text-primary icon-calendar"></span></span>
+                        </h2>
+                    </div>
+
+                    <div class='col-11 col-lg-3 order-lg-1 mt-4 timeline'>
+                        <p>Apr 2020 - Jul 2020</p>
+                    </div>
+
+                    <div class="col-lg-8 order-lg-3 mb-3 exp-item">
+                        <h3 class="h3 mb-4"><a href="https://hallymmedicalai.github.io/">Climate and Energy Policy & Strategy Research Group, KAIST</a></h3>
+                        <h5 class="h5 mb-4 text-black">Research Assistant</h5>
+                        <ul class="list-unstyled ul-check success">
+                            <li>TBD</li>
+                        </ul>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
+        <section class="site-section bg-light" id="pt-section">
+            <div class="container">
+                <div class="row mb-5 justify-content-center">
+                    <div class="col-12 text-center" data-aos="fade">
+                        <h2 class="section-title mb-3">Presentations</h2>
                     </div>
                 </div>
 
