--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
 
                                     <ul class="dropdown">
                                         <li><a href="#pt-section" class="nav-link">Presentations</a></li>
-                                        <!-- <li><a href="#honors-section" class="nav-link">Honors & Awards</a></li> -->
+                                        <li><a href="#skill-section" class="nav-link">Programming Skills</a></li>
+                                        <li><a href="#honors-section" class="nav-link">Honors & Awards</a></li>
                                     </ul>
                                 </li>
                                 <!-- <li><a href="#skill-section" class="nav-link">Computer Skills</a></li> -->
@@ -213,9 +214,27 @@
                     <div class="col-lg-8 order-lg-3 mb-3 exp-item">
                         <h3 class="h3 mb-4"><a href="https://hallymmedicalai.github.io/">Korea Advanced Institute of Science and Technology (KAIST)</a></h3>
                         <h5 class="h5 mb-4 text-black">M.S. in Green Business and Policy, Feb 2019</h5>
-                        <h5 class="h5 mb-4 text-black"><em>Honors with Master's Thesis</em></h5>
                         <ul class="list-unstyled ul-check success">
-                            <li>TBD</li>
+                            <li><em>Honors with Master's Thesis</em></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="row" data-aos="fade-up" data-aos-delay="">
+                    <div class='col-1 col-lg-1 order-lg-2 mt-4'>
+                        <h2 class="h3 mb-4 text-center"><span><span class="text-primary icon-calendar"></span></span>
+                        </h2>
+                    </div>
+
+                    <div class='col-11 col-lg-3 order-lg-1 mt-4 timeline'>
+                        <p>Mar 2011 - Jan 2017</p>
+                    </div>
+
+                    <div class="col-lg-8 order-lg-3 mb-3 exp-item">
+                        <h3 class="h3 mb-4"><a href="https://hallymmedicalai.github.io/">Yonsei University</a></h3>
+                        <h5 class="h5 mb-4 text-black">B.S. in Chemical Engineering, Feb 2017</h5>
+                        <ul class="list-unstyled ul-check success">
+                            <li><em>Honors with Academic Excellence</em></li>
                         </ul>
                     </div>
                 </div>
@@ -306,33 +325,14 @@
                     </div>
 
                     <div class='col-11 col-lg-3 order-lg-1 mt-4 timeline'>
-                        <p>Feb 2019 - Jul 2020</p>
+                        <p>Fall 2020</p>
                     </div>
 
                     <div class="col-lg-8 order-lg-3 mb-3 exp-item">
-                        <h3 class="h3 mb-4"><a href="https://www.10-9lab.com/">Sustainable Development Research Center, KAIST</a></h3>
-                        <h5 class="h5 mb-4 text-black">Research Associate</h5>
+                        <h3 class="h3 mb-4"><a href="https://www.10-9lab.com/">Intermediate Microeconomic Theory</a></h3>
+                        <!-- <h5 class="h5 mb-4 text-black">Research Associate</h5> -->
                         <ul class="list-unstyled ul-check success">
                             <!-- <li></li> -->
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="row" data-aos="fade-up" data-aos-delay="">
-                    <div class='col-1 col-lg-1 order-lg-2 mt-4'>
-                        <h2 class="h3 mb-4 text-center"><span><span class="text-primary icon-calendar"></span></span>
-                        </h2>
-                    </div>
-
-                    <div class='col-11 col-lg-3 order-lg-1 mt-4 timeline'>
-                        <p>Apr 2020 - Jul 2020</p>
-                    </div>
-
-                    <div class="col-lg-8 order-lg-3 mb-3 exp-item">
-                        <h3 class="h3 mb-4"><a href="https://hallymmedicalai.github.io/">Climate and Energy Policy & Strategy Research Group, KAIST</a></h3>
-                        <h5 class="h5 mb-4 text-black">Research Assistant</h5>
-                        <ul class="list-unstyled ul-check success">
-                            <li>TBD</li>
                         </ul>
                     </div>
                 </div>
@@ -404,15 +404,11 @@
                     </div>
 
                     <div class='col-11 col-lg-3 order-lg-1 mt-4 timeline'>
-                        <p>Feb 2019 - Jul 2020</p>
+                        <p>Jun 2019</p>
                     </div>
 
                     <div class="col-lg-8 order-lg-3 mb-3 exp-item">
-                        <h3 class="h3 mb-4"><a href="https://www.10-9lab.com/">Sustainable Development Research Center, KAIST</a></h3>
-                        <h5 class="h5 mb-4 text-black">Research Associate</h5>
-                        <ul class="list-unstyled ul-check success">
-                            <!-- <li></li> -->
-                        </ul>
+                        <h3 class="h3 mb-4"><a href="https://www.10-9lab.com/">Oral Presentation in International Association for Energy Economics</a></h3>
                     </div>
                 </div>
 
@@ -423,15 +419,11 @@
                     </div>
 
                     <div class='col-11 col-lg-3 order-lg-1 mt-4 timeline'>
-                        <p>Apr 2020 - Jul 2020</p>
+                        <p>Jun 2018</p>
                     </div>
 
                     <div class="col-lg-8 order-lg-3 mb-3 exp-item">
-                        <h3 class="h3 mb-4"><a href="https://hallymmedicalai.github.io/">Climate and Energy Policy & Strategy Research Group, KAIST</a></h3>
-                        <h5 class="h5 mb-4 text-black">Research Assistant</h5>
-                        <ul class="list-unstyled ul-check success">
-                            <li>TBD</li>
-                        </ul>
+                        <h3 class="h3 mb-4"><a href="https://www.10-9lab.com/">Oral Presentation in International Association for Energy Economics</a></h3>
                     </div>
                 </div>
 
